[tool.poetry]
name = "safeway-data"
version = "0.1.0"
description = "Data mining tools for Safeway app"
authors = ["Evgeny Demchenko <little_pea@list.ru>"]

[tool.poetry.dependencies]
python = ">=3.9,<3.10"
typer = "^0.4.1"
dependencies = "^7.1.7"
google-api-python-client = "^2.47.0"
google-auth-httplib2 = "^0.1.0"
google-auth-oauthlib = "^0.5.1"

[tool.poetry.dev-dependencies]
pytest = "^7.1.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
