[tool.poetry]
name = "safeway-data"
version = "0.1.0"
description = "Data mining tools for Safeway app"
authors = ["Evgeny Demchenko <little_pea@list.ru>"]

[tool.poetry.dependencies]
python = ">=3.9,<3.11"
typer = "^0.4.1"
google-api-python-client = "^2.47.0"
google-auth-httplib2 = "^0.1.0"
google-auth-oauthlib = "^0.5.1"
returns = "^0.19.0"
python-dotenv = "^0.20.0"
pydantic = "^1.9.0"
pycountry = "^22.3.5"
# TODO: switch base to upstream once resolved https://github.com/proofit404/dependencies/issues/538
dependencies = {url = "https://github.com/littlepea/dependencies/archive/refs/heads/release.zip"}
google-cloud-translate = "^3.7.2"
googlemaps = "^4.6.0"
Scrapy = "^2.6.1"
betamax = "^0.8.1"

[tool.poetry.dev-dependencies]
pytest = "^7.1.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
